--- a/2_openai/4_lab4.ipynb
+++ b/2_openai/4_lab4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
@@ -75,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +107,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "As of May 2025, several AI agent frameworks have emerged, each offering unique capabilities for developing intelligent, autonomous systems.\n",
+       "\n",
+       "**LangChain** is a prominent Python-based framework that enables developers to build custom large language model (LLM) applications. Its modular design supports integrations with various LLMs and external tools, facilitating the creation of complex workflows. Key features include native support for multiple LLMs, a rich ecosystem of tools, and extensibility for custom tool and agent definitions. ([medium.com](https://medium.com/%40elisowski/top-ai-agent-frameworks-in-2025-9bcedab2e239?utm_source=openai))\n",
+       "\n",
+       "**AutoGen**, developed by Microsoft, focuses on multi-agent systems and code automation. It employs natural language for agent communication, allowing for the definition of multiple agents that coordinate to complete tasks. AutoGen includes built-in agents, a graphical UI for prototyping, and compatibility with OpenAI and Azure OpenAI endpoints. ([medium.com](https://medium.com/%40elisowski/top-ai-agent-frameworks-in-2025-9bcedab2e239?utm_source=openai))\n",
+       "\n",
+       "**LangGraph** extends LangChain by introducing a graph-based approach to manage stateful, multi-agent workflows. This framework is ideal for applications requiring deterministic control, retries, or branching logic, and is deeply integrated with LangChain’s tools, memory, and models. ([medium.com](https://medium.com/%40elisowski/top-ai-agent-frameworks-in-2025-9bcedab2e239?utm_source=openai))\n",
+       "\n",
+       "**CrewAI** emphasizes team-based agent collaboration by assigning distinct roles to agents to complete complex workflows. It is particularly suitable for data science and content creation projects that require coordinated agent efforts. ([odsc.medium.com](https://odsc.medium.com/top-10-open-source-ai-agent-frameworks-to-know-in-2025-c739854ec859?utm_source=openai))\n",
+       "\n",
+       "**AutoGPT** is an influential open-source project that showcases autonomous agents capable of performing tasks with minimal human input. It introduces recursive execution, persistent memory, and access to tools like web browsing and file handling, serving as a concrete example of a complex autonomous agent. ([dev.to](https://dev.to/voltagent/top-5-ai-agent-frameworks-in-2025-4gab?utm_source=openai))\n",
+       "\n",
+       "**Eliza** is a Web3-friendly AI agent operating system that integrates seamlessly with blockchain applications. It allows for reading and writing blockchain data and interacting with smart contracts, making it suitable for decentralized applications. ([arxiv.org](https://arxiv.org/abs/2501.06781?utm_source=openai))\n",
+       "\n",
+       "**AutoAgent** is a fully automated, zero-code framework for LLM agents, enabling users to create and deploy agents through natural language alone. It serves as a versatile multi-agent system for general AI assistants and has demonstrated superior performance in generalist multi-agent tasks. ([arxiv.org](https://arxiv.org/abs/2502.05957?utm_source=openai))\n",
+       "\n",
+       "These frameworks reflect the rapid advancements in AI agent development, offering diverse tools and approaches to meet various application needs. "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "message = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -126,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# See note above about cost of WebSearchTool\n",
     "\n",
-    "HOW_MANY_SEARCHES = 3\n",
+    "HOW_MANY_SEARCHES = 10\n",
     "\n",
     "INSTRUCTIONS = f\"You are a helpful research assistant. Given a query, come up with a set of web searches \\\n",
     "to perform to best answer the query. Output {HOW_MANY_SEARCHES} terms to query for.\"\n",
@@ -161,9 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "searches=[WebSearchItem(reason='To find an overview of top AI agent frameworks introduced or updated in 2025.', query='top AI agent frameworks 2025'), WebSearchItem(reason='To track the latest developments in AI agent frameworks and technologies for the year 2025.', query='latest AI agent technologies 2025'), WebSearchItem(reason='To identify the most promising AI agent frameworks that have emerged in 2025.', query='emerging AI agent frameworks 2025'), WebSearchItem(reason='To explore the features and capabilities of AI agent frameworks released in 2025.', query='AI agent framework features 2025'), WebSearchItem(reason='To look for comparisons and evaluations of AI agent frameworks available in 2025.', query='comparison of AI agent frameworks 2025'), WebSearchItem(reason='To learn about industry leaders that are pioneering AI agent frameworks in 2025.', query='leading companies AI agent frameworks 2025'), WebSearchItem(reason='To find academic papers discussing new AI agent frameworks or methodologies in 2025.', query='academic papers AI agent frameworks 2025'), WebSearchItem(reason='To gather insights on community contributions to AI agent frameworks in 2025, such as open-source projects.', query='open-source AI agent frameworks 2025'), WebSearchItem(reason='To read about the challenges and limitations of AI agent frameworks designed in 2025.', query='challenges AI agent frameworks 2025'), WebSearchItem(reason='To discover case studies or real-world applications of AI agent frameworks implemented in 2025.', query='case studies AI agent frameworks 2025')]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "message = \"Latest AI Agent frameworks in 2025\"\n",
@@ -175,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +231,8 @@
     "def send_email(subject: str, html_body: str) -> Dict[str, str]:\n",
     "    \"\"\" Send out an email with the given subject and HTML body \"\"\"\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\") # Change this to your verified email\n",
-    "    to_email = To(\"ed.donner@gmail.com\") # Change this to your email\n",
+    "    from_email = Email(\"admin@ai-scientia.com\") # Change this to your verified email\n",
+    "    to_email = To(\"tcurtis45@gmail.com\") # Change this to your email\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    response = sg.client.mail.send.post(request_body=mail)\n",
@@ -193,16 +241,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FunctionTool(name='send_email', description='Send out an email with the given subject and HTML body', params_json_schema={'properties': {'subject': {'title': 'Subject', 'type': 'string'}, 'html_body': {'title': 'Html Body', 'type': 'string'}}, 'required': ['subject', 'html_body'], 'title': 'send_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x7ddc7e79d260>, strict_json_schema=True)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send_email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +290,7 @@
     "    \"You should first come up with an outline for the report that describes the structure and \"\n",
     "    \"flow of the report. Then, generate the report and return that as your final output.\\n\"\n",
     "    \"The final output should be in markdown format, and it should be lengthy and detailed. Aim \"\n",
-    "    \"for 5-10 pages of content, at least 1000 words.\"\n",
+    "    \"for 5-10 pages of content, at least 1000 words. Always end with a reference section that hyperlinks to the sources.\"\n",
     ")\n",
     "\n",
     "\n",
@@ -263,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,9 +386,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting research...\n",
+      "Planning searches...\n",
+      "Will perform 10 searches\n",
+      "Searching...\n",
+      "Finished searching\n",
+      "Thinking about report...\n",
+      "Finished writing report\n",
+      "Writing email...\n",
+      "Email sent\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
     "query =\"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -342,6 +418,101 @@
     "    print(\"Hooray!\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.43.0 (0)\n",
+       " -->\n",
+       "<!-- Title: G Pages: 1 -->\n",
+       "<svg width=\"246pt\" height=\"203pt\"\n",
+       " viewBox=\"0.00 0.00 245.60 203.05\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 199.05)\">\n",
+       "<title>G</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-199.05 241.6,-199.05 241.6,4 -4,4\"/>\n",
+       "<!-- __start__ -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>__start__</title>\n",
+       "<ellipse fill=\"lightblue\" stroke=\"black\" cx=\"176.79\" cy=\"-178.79\" rx=\"51.74\" ry=\"16.03\"/>\n",
+       "<text text-anchor=\"middle\" x=\"176.79\" y=\"-175.09\" font-family=\"Arial\" font-size=\"14.00\">__start__</text>\n",
+       "</g>\n",
+       "<!-- Email agent -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>Email agent</title>\n",
+       "<polygon fill=\"lightyellow\" stroke=\"black\" points=\"230.79,-126.53 122.79,-126.53 122.79,-68.53 230.79,-68.53 230.79,-126.53\"/>\n",
+       "<text text-anchor=\"middle\" x=\"176.79\" y=\"-93.83\" font-family=\"Arial\" font-size=\"14.00\">Email agent</text>\n",
+       "</g>\n",
+       "<!-- __start__&#45;&gt;Email agent -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>__start__&#45;&gt;Email agent</title>\n",
+       "<path fill=\"none\" stroke=\"black\" stroke-width=\"1.5\" d=\"M176.79,-162.51C176.79,-155.12 176.79,-145.89 176.79,-136.76\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" stroke-width=\"1.5\" points=\"180.29,-136.6 176.79,-126.6 173.29,-136.6 180.29,-136.6\"/>\n",
+       "</g>\n",
+       "<!-- __end__ -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>__end__</title>\n",
+       "<ellipse fill=\"lightblue\" stroke=\"black\" cx=\"48.79\" cy=\"-16.26\" rx=\"48.58\" ry=\"16.03\"/>\n",
+       "<text text-anchor=\"middle\" x=\"48.79\" y=\"-12.56\" font-family=\"Arial\" font-size=\"14.00\">__end__</text>\n",
+       "</g>\n",
+       "<!-- Email agent&#45;&gt;__end__ -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>Email agent&#45;&gt;__end__</title>\n",
+       "<path fill=\"none\" stroke=\"black\" stroke-width=\"1.5\" d=\"M131.3,-68.36C114.12,-57.72 95,-45.88 79.49,-36.27\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" stroke-width=\"1.5\" points=\"81.16,-33.19 70.81,-30.9 77.47,-39.14 81.16,-33.19\"/>\n",
+       "</g>\n",
+       "<!-- send_email -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>send_email</title>\n",
+       "<ellipse fill=\"lightgreen\" stroke=\"black\" cx=\"176.79\" cy=\"-16.26\" rx=\"60.62\" ry=\"16.03\"/>\n",
+       "<text text-anchor=\"middle\" x=\"176.79\" y=\"-12.56\" font-family=\"Arial\" font-size=\"14.00\">send_email</text>\n",
+       "</g>\n",
+       "<!-- Email agent&#45;&gt;send_email -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>Email agent&#45;&gt;send_email</title>\n",
+       "<path fill=\"none\" stroke=\"black\" stroke-width=\"1.5\" stroke-dasharray=\"1,5\" d=\"M170.3,-68.36C169.92,-60.07 169.96,-51.04 170.43,-42.92\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" stroke-width=\"1.5\" points=\"173.92,-43.15 171.29,-32.89 166.95,-42.55 173.92,-43.15\"/>\n",
+       "</g>\n",
+       "<!-- send_email&#45;&gt;Email agent -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>send_email&#45;&gt;Email agent</title>\n",
+       "<path fill=\"none\" stroke=\"black\" stroke-width=\"1.5\" stroke-dasharray=\"1,5\" d=\"M182.29,-32.89C183.17,-40.23 183.59,-49.33 183.54,-58.34\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" stroke-width=\"1.5\" points=\"180.04,-58.27 183.28,-68.36 187.03,-58.45 180.04,-58.27\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.sources.Source at 0x7ddc7ee7c4a0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visualize the graph (see more here: https://openai.github.io/openai-agents-python/visualization)\n",
+    "\n",
+    "# Prerequisites:\n",
+    "# - Installing the visualization extension: uv add \"openai-agents[viz]\"\n",
+    "# - Installing graphviz (if you don't have it already): \n",
+    "# -- Mac: brew install graphviz\n",
+    "# -- Windows: visit https://graphviz.org/download/\n",
+    "\n",
+    "from agents.extensions.visualization import draw_graph\n",
+    "draw_graph(planner_agent)\n",
+    "draw_graph(search_agent)\n",
+    "draw_graph(email_agent)\n",
+    "#draw_graph(writer_agent)"
    ]
   },
   {
@@ -387,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
