--- a/1_foundations/4_lab4.ipynb
+++ b/1_foundations/4_lab4.ipynb
@@ -88,16 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Push: HEY YOU!!\n"
+     ]
+    }
+   ],
    "source": [
-    "push(\"HEY!!\")"
+    "push(\"HEY YOU!!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +192,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'type': 'function',\n",
+       "  'function': {'name': 'record_user_details',\n",
+       "   'description': 'Use this tool to record that a user is interested in being in touch and provided an email address',\n",
+       "   'parameters': {'type': 'object',\n",
+       "    'properties': {'email': {'type': 'string',\n",
+       "      'description': 'The email address of this user'},\n",
+       "     'name': {'type': 'string',\n",
+       "      'description': \"The user's name, if they provided it\"},\n",
+       "     'notes': {'type': 'string',\n",
+       "      'description': \"Any additional information about the conversation that's worth recording to give context\"}},\n",
+       "    'required': ['email'],\n",
+       "    'additionalProperties': False}}},\n",
+       " {'type': 'function',\n",
+       "  'function': {'name': 'record_unknown_question',\n",
+       "   'description': \"Always use this tool to record any question that couldn't be answered as you didn't know the answer\",\n",
+       "   'parameters': {'type': 'object',\n",
+       "    'properties': {'question': {'type': 'string',\n",
+       "      'description': \"The question that couldn't be answered\"}},\n",
+       "    'required': ['question'],\n",
+       "    'additionalProperties': False}}}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,16 +257,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Push: Recording this is a really hard question asked that I couldn't answer\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'recorded': 'ok'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "globals()[\"record_unknown_question\"](\"this is a really hard question\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,11 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = PdfReader(\"me/linkedin.pdf\")\n",
+    "reader = PdfReader(\"me/Tony_Linkedin.pdf\")\n",
     "linkedin = \"\"\n",
     "for page in reader.pages:\n",
     "    text = page.extract_text()\n",
@@ -262,12 +318,12 @@
     "with open(\"me/summary.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "    summary = f.read()\n",
     "\n",
-    "name = \"Ed Donner\""
+    "name = \"Tony Curtis\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,9 +371,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool called: record_unknown_question\n",
+      "Push: Recording Who is the president? asked that I couldn't answer\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
@@ -437,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
