--- a/guides/11_async_python.ipynb
+++ b/guides/11_async_python.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "09f5662a",
    "metadata": {},
    "outputs": [],
@@ -35,83 +35,145 @@
     "\n",
     "import asyncio\n",
     "\n",
-    "async def do_some_work():\n",
-    "    print(\"Starting work\")\n",
-    "    await asyncio.sleep(1)\n",
-    "    print(\"Work complete\")\n"
+    "async def do_some_work(task_name):\n",
+    "    print(f\"Starting work for {task_name}\")\n",
+    "    await asyncio.sleep(5)\n",
+    "    print(f\"Work complete for {task_name}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "07ab3abf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<coroutine object do_some_work at 0x780bd80ef9f0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What will this do?\n",
     "\n",
-    "do_some_work()"
+    "do_some_work(\"Broken_task\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6d681b6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting work for Await_1\n",
+      "Work complete for Await_1\n"
+     ]
+    }
+   ],
    "source": [
     "# OK let's try that again!\n",
     "\n",
-    "await do_some_work()"
+    "await do_some_work(\"Await_1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ea867090",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_416943/2720275673.py:4: RuntimeWarning: coroutine 'do_some_work' was never awaited\n",
+      "  do_some_work(\"Await_1\")\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "/tmp/ipykernel_416943/2720275673.py:5: RuntimeWarning: coroutine 'do_some_work' was never awaited\n",
+      "  do_some_work(\"Await_2\")\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "/tmp/ipykernel_416943/2720275673.py:6: RuntimeWarning: coroutine 'do_some_work' was never awaited\n",
+      "  do_some_work(\"Await_3\")\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    }
+   ],
    "source": [
     "# What's wrong with this?\n",
     "\n",
     "async def do_a_lot_of_work():\n",
-    "    do_some_work()\n",
-    "    do_some_work()\n",
-    "    do_some_work()\n",
+    "    do_some_work(\"Await_1\")\n",
+    "    do_some_work(\"Await_2\")\n",
+    "    do_some_work(\"Await_3\")\n",
     "\n",
     "await do_a_lot_of_work()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e9c75c3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting work for Await_1\n",
+      "Work complete for Await_1\n",
+      "Starting work for Await_2\n",
+      "Work complete for Await_2\n",
+      "Starting work for Await_3\n",
+      "Work complete for Await_3\n"
+     ]
+    }
+   ],
    "source": [
     "# Interesting warning! Let's fix it\n",
     "\n",
     "async def do_a_lot_of_work():\n",
-    "    await do_some_work()\n",
-    "    await do_some_work()\n",
-    "    await do_some_work()\n",
+    "    await do_some_work(\"Await_1\")\n",
+    "    await do_some_work(\"Await_2\")\n",
+    "    await do_some_work(\"Await_3\")\n",
     "\n",
     "await do_a_lot_of_work()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "720cf3f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting work for Await_1\n",
+      "Starting work for Await_2\n",
+      "Starting work for Await_3\n",
+      "Work complete for Await_1\n",
+      "Work complete for Await_2\n",
+      "Work complete for Await_3\n"
+     ]
+    }
+   ],
    "source": [
     "# And now let's do it in parallel\n",
     "# It's important to recognize that this is not \"multi-threading\" in the way that you may be used to\n",
     "# The asyncio library is running on a single thread, but it's using a loop to switch between tasks while one is waiting\n",
     "\n",
     "async def do_a_lot_of_work_in_parallel():\n",
-    "    await asyncio.gather(do_some_work(), do_some_work(), do_some_work())\n",
+    "    await asyncio.gather(do_some_work(\"Await_1\"), do_some_work(\"Await_2\"), do_some_work(\"Await_3\"))\n",
     "\n",
     "await do_a_lot_of_work_in_parallel()"
    ]
@@ -148,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
